CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(PION_SYSTEM_STATUSSERVER)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/CMake/)

FIND_PACKAGE(Boost COMPONENTS thread system regex REQUIRED)
FIND_PACKAGE(OpenSSL)

IF (OPENSSL_FOUND)
   add_definitions(-DBOOST_NETWORK_ENABLE_HTTPS)
   include_directories(${OPENSSL_INCLUDE_DIR})
ENDIF()

INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIR} )

FIND_LIBRARY(pion_LIB NAMES pion HINTS /usr/local/lib /usr/lib)

FIND_PACKAGE(Sqlite3 REQUIRED)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(content)
ADD_SUBDIRECTORY(python)


